# pattern-clock

./: Cargo.toml  Dioxus.toml  README.md  serve-all.sh
assets/: graphview.js  main.css  vis-timeline-graph2d.min.js  web.css
bruno/: Agent 1 - Process Data.bru  Agent-Status.bru  Agent2-Process.bru  Agent3-Process.bru  Agent4-Process.bru  Agent5-Process.bru  bruno.json
public/: index.html
src/: agents.rs  connections.rs  lstm.rs  main.rs  mcp_server.rs
src/app/: desktop.rs  mod.rs  web.rs
src/components/: mod.rs
src/shared/: api.rs  mod.rs
