[package]
name = "pattern_clock"
version = "0.1.0"
authors = ["vecnode <vecnode@vecnode>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack"] }
rmcp = "0.14"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
ractor = "0.15"
reqwest = { version = "0.12", features = ["json"] }
pulldown-cmark = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
burn = { version = "0.20.1", features = ["autodiff", "wgpu"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1", features = ["rt"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]